--- a/TimiPro/Views/Imovels/Index.cshtml
+++ b/TimiPro/Views/Imovels/Index.cshtml
@@ -53,9 +53,9 @@
                         @Html.DisplayFor(modelItem => item.ClienteNome)
                     </td>
                     <td class="text-center">
-                        <a asp-action="Edit" asp-route-id="@item.ID">Editar Imóvel</a> |
-                        <a asp-action="Details" asp-route-id="@item.ID">Detalhes Imóvel</a> |
-                        <a asp-action="Delete" asp-route-id="@item.ID">Excluir Imóvel</a>
+                        <a asp-action="Edit" asp-route-id="@item.ID">Editar</a> |
+                        <a asp-action="Details" asp-route-id="@item.ID">Detalhes</a> |
+                        <a asp-action="Delete" asp-route-id="@item.ID">Excluir</a>
                     </td>
                 </tr>
             }
